force-app/main/default/objects/PP_eCOA_Configuration__mdt/PP_eCOA_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>PP eCOA Configuration</label>
    <pluralLabel>PP eCOA Configurations</pluralLabel>
</CustomObject>