force-app/main/default/objects/PP_eCOA_Configuration__mdt/fields/Diary_URL__c.field-meta.xml
<CustomField>
    <fullName>Diary_URL__c</fullName>
    <label>Diary URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>