force-app/main/default/objects/PP_eCOA_Configuration__mdt/fields/Issuer_Guid__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Guid__c</fullName>
    <label>Issuer Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>