force-app/main/default/objects/PP_eCOA_Configuration__mdt/fields/Issuer_Keys__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Keys__c</fullName>
    <label>Issuer Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>