force-app/main/default/objects/PP_eCOA_Configuration__mdt/fields/Org_Guid__c.field-meta.xml
<CustomField>
    <fullName>Org_Guid__c</fullName>
    <label>Org Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>